# IMEX_Warmodel

./: README.md  pubspec.yaml
cpp_core/: CMakeLists.txt
cpp_core/include/: ffi_interface.h  file_io.h  matrix.h  solver.h  types.h
cpp_core/src/: ffi_interface.cpp  file_io.cpp  matrix.cpp  solver.cpp  types.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: combat_params.dart  simulation_results.dart  unit_type.dart  unit_type_info.dart
lib/providers/: statemanager.dart
lib/screens/: home_screen.dart  matrix_screen.dart  results_screen.dart  router_screen.dart  settings_screen.dart  units_screen.dart
lib/services/: ffi_service.dart  file_service.dart  simulation_service.dart
lib/utils/: adaptive_breakpoints.dart
lib/widgets/: confirm_dialog.dart  customtitlebar.dart  effectiveness_matrix.dart  loading_overlay.dart  matrix_cell.dart  param_field.dart  result_graph.dart  stats_card.dart  tag_manager_dialog.dart  total_force_graph.dart  unit_card.dart
linux/flutter/: generated_plugins.cmake
windows/: .gitignore  CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/flutter/ephemeral/: generated_config.cmake
windows/flutter/ephemeral/.plugin_symlinks/: file_picker  jni  path_provider_windows  video_player_win  window_plus
windows/runner/: CMakeLists.txt  main.cpp  win32_window.cpp
